# Questbook_Daejeon

./: .dockerignore  .env.example  .gitignore  README.md  badges.html  docker-compose.cloud-test.yaml  docker-compose.dev.yaml  docker-compose.yaml  index.html  map.html  notes.html  quests.html  모험가의_수첩_3단_목업.html  모험가의_수첩_앱_목업.html
apps/: README.md
contracts/: README.md
services/app-api/: Dockerfile  README.md  pyproject.toml
services/app-api/src/questbook_api/: __init__.py  server.py  settings.py
services/app-api/src/questbook_api/api/: __init__.py
services/app-api/src/questbook_api/application/: __init__.py  baseline_service.py
services/app-api/src/questbook_api/domain/: __init__.py  models.py
services/app-api/src/questbook_api/domain/auth/: __init__.py  tokens.py
services/app-api/src/questbook_api/domain/ggumdori/: __init__.py
services/app-api/src/questbook_api/domain/notes/: __init__.py
services/app-api/src/questbook_api/domain/partners/: __init__.py
services/app-api/src/questbook_api/domain/places/: __init__.py
services/app-api/src/questbook_api/infrastructure/: __init__.py  cache.py  oauth_state.py  repository.py
services/app-api/src/questbook_api/integrations/: __init__.py
services/app-api/src/questbook_api/observability/: __init__.py
services/app-api/tests/: data_services.py  test_baseline_service.py  test_cache.py  test_oauth_client.py  test_oauth_identity.py  test_oauth_routes.py  test_oauth_state.py  test_object_storage_client.py  test_ocr_client.py  test_receipt_ocr_verification.py  test_settings.py  test_tourapi_client.py
(+76 files in other folders)
