[project]
name = "questbook-app-api"
version = "0.1.0"
description = "Questbook Daejeon application API service scaffold."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
questbook-api = "questbook_api.server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
